<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BlueBoothPinterDetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--物料信息详单数据-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/znum_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/znum"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/name1"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/werks_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/werks"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/matnr_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/matnr"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/zlichn_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/zlichn"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/lgmng_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lgmng"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/Zmenge_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/Zmenge"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/date_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/date"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </EditText>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/erfmgl_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/erfmgl"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </TextView>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:digits="@+id/text"
                            android:text="@string/mark_name"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/mark"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1.70"
                            android:inputType="text"
                            android:textColor="@android:color/black"
                            android:textSize="16sp">

                            <requestFocus />
                        </EditText>
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <!--按钮操作-->
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <Button
                    android:id="@+id/printer"
                    android:layout_width="102dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="0.30"
                    android:background="@color/colorAccent"
                    android:text="@string/printer" />

                <Button
                    android:id="@+id/back_home"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_marginRight="10dip"
                    android:layout_weight="0.30"
                    android:background="@color/colorAccent"
                    android:text="@string/back_home" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_marginRight="30dp"
                    android:layout_weight="0.30"
                    android:background="@color/colorAccent"
                    android:text="@string/exit" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
